[tool.poetry]
name = "hw302-pandas-usage"
version = "0.1.0"
description = ""
authors = ["PavelStelmakhV <stelmahpv13@gmail.com>"]
readme = "README.md"
packages = [{include = "hw302_pandas_usage"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.3"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
